# yemot-vote-backend

./: dockerfile  main.py  pyproject.toml  requirements.txt
app/api/v1/: api.py
app/api/v1/endpoints/: candidates.py  groups.py  voters.py  votes.py
app/core/: config.py  logging_config.py
app/db/: session.py
app/models/: __init__.py  admin_user.py  base.py  candidate.py  group.py  vote.py  voter.py  voter_vote.py
app/schemas/: __init__.py  candidate.py  group.py  vote.py  voter.py
app/services/: candidate_service.py  group_service.py  vote_service.py  voter_service.py
tests/: test_services.py
